--- a/3tire-configs/kustomization.yaml
+++ b/3tire-configs/kustomization.yaml
@@ -18,9 +18,9 @@ commonAnnotations:
 
 # Centralized image management
 images:
-  - name: itsbaivab/frontend
-    newTag: v2
-  - name: itsbaivab/backend
+  - name: piyushsachdeva/frontend
+    newTag: v1
+  - name: piyushsachdeva/backend
     newTag: latest
   - name: postgres
     newTag: "15"
